css3-demo.css
@charset "utf-8";

@font-face {
	font-family:zekton;
	src:url(zekton.ttf);
}

style[contenteditable] {
	display: block;
	width: 90%;
	margin: 0 auto;
}

.example {
	background-color: #333;
	color: #ccc;
	min-height: 200px;
	width: 95%;
	display: block;
	margin: 10px auto;
	border-color: #ccc;
	border-style: solid;
	border-width: thin;
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
	-webkit-perspective: 1024px;
	-moz-perspective: 1024px;
	-o-perspective: 1024px;
	-ms-perspective: 1024px;
	perspective: 1024px;
}

p {
	margin: 5px;
}

.example-group {
	background: #666666;
	background: -moz-linear-gradient(top, #666666 0%, #111111 10%, #111111 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#666666), color-stop(10%,#111111), color-stop(100%,#111111));
	background: -webkit-linear-gradient(top, #666666 0%,#111111 10%,#111111 100%);
	background: -o-linear-gradient(top, #666666 0%,#111111 10%,#111111 100%);
	background: -ms-linear-gradient(top, #666666 0%,#111111 10%,#111111 100%);
	background: linear-gradient(top, #666666 0%,#111111 10%,#111111 100%);
	width: 99%;
	margin: 10px auto;
	-webkit-border-radius: 25px;
	-moz-border-radius: 25px;
	-ms-border-radius: 25px;
	border-radius: 15px;
	-webkit-box-shadow: inset 0 0 50px 5px #999;
	-moz-box-shadow: inset 0 0 50px 5px #999;
	box-shadow: inset 0 0 50px 5px #999;
}

/* Everything is commented out now because all of the showcased styles are now in <style contenteditable=""></style> blocks in the index.html file now.

/*
#border-image:hover {
	border-width: 27px;
	-moz-border-image: url(border-image.jpg) 27;
	-webkit-border-image: url(border-image.jpg) 27;
	-o-border-image: url(border-image.jpg) 27;
	border-image: url(border-image.jpg) 27;
}

#border-radius:hover {
	-webkit-border-radius: 10px 20px 30px 40px;
	-moz-border-radius: 10px 20px 30px 40px;
	-ms-border-radius: 10px 20px 30px 40px;
	border-radius: 10px 20px 30px 40px;
}

#box-shadow:hover {
	-webkit-box-shadow: 25px 25px 25px #000;
	-moz-box-shadow: 25px 25px 25px #000;
	box-shadow: 25px 25px 25px #000;
}

#font-face:hover {
	font-family:zekton;
}

#transitions:hover {
	-webkit-border-radius: 10px 20px 30px 40px;
	-moz-border-radius: 10px 20px 30px 40px;
	border-radius: 10px 20px 30px 40px;
	-webkit-box-shadow: 25px 25px 25px #000;
	-moz-box-shadow: 25px 25px 25px #000;
	box-shadow: 25px 25px 25px #000;
	-moz-transform:scale3d(1.1) translate3d(20px) rotate3d(30deg) skew(20px);
	-webkit-transform:scale3d(1.1) translate3d(20px) rotate3d(30deg) skew(20px);
	-ms-transform:scale3d(1.1) translate3d(20px) rotate3d(30deg) skew(20px);
	-o-transform:scale3d(1.1) translate3d(20px) rotate3d(30deg) skew(20px);
	transform:scale3d(1.1) translate3d(20px) rotate3d(30deg) skew(20px);
}

#transforms-2d:hover {
	-moz-transform:scale(1.1) translateX(20px) translateY(20px) skewX(20px) skewY(20px);
	-webkit-transform:scale(1.1) translateX(20px) translateY(20px) skewX(20px) skewY(20px);
	-ms-transform:scale(1.1) translateX(20px) translateY(20px) skewX(20px) skewY(20px);
	-o-transform:scale(1.1) translateX(20px) translateY(20px) skewX(20px) skewY(20px);
	transform:scale(1.1) translateX(20px) translateY(20px) skewX(20px) skewY(20px);
}

#transforms-3d:hover {
	-moz-transform: translateX(20px) translateY(20px) translateZ(20px) rotateX(20deg) rotateY(20deg) rotateZ(20deg);
	-webkit-transform: translateX(20px) translateY(20px) translateZ(20px) rotateX(20deg) rotateY(20deg) rotateZ(20deg);
	-ms-transform: translateX(20px) translateY(20px) translateZ(20px) rotateX(20deg) rotateY(20deg) rotateZ(20deg);
	-o-transform: translateX(20px) translateY(20px) translateZ(20px) rotateX(20deg) rotateY(20deg) rotateZ(20deg);
	transform: translateX(20px) translateY(20px) translateZ(20px) rotateX(20deg) rotateY(20deg) rotateZ(20deg);
}

.first-child:hover {
	background-color: #f00;
	color: #000;
}

.first-child:first-child:hover {
	background-color: #0f0;
	color: #000;
}

.last-child:hover {
	background-color: #f00;
	color: #000;
}

.last-child:last-child:hover {
	background-color: #0f0;
	color: #000;
}

.nth-child:hover {
	background-color: #f00;
	color: #000;
}

.nth-child:nth-child(2):hover {
	background-color: #0f0;
	color: #000;
}

.first-letter::first-letter {
	font-weight: large;
	color: #0f0;
}

#general-sibling ~ .example:hover {
	background-color: #0f0;
	color: #000;
}

.attribute[title^="abc"] {
	font-weight: bold;
}

.attribute[title$="ghi"] {
	font-style: italic;
}

.attribute[title*="def"] {
	color: #c70;
}
*/

